Updates from Overleaf

--- a/paper.bib
+++ b/paper.bib
@@ -611,19 +611,19 @@
     year = "2013"
 }
 
-@article{Greif:2017bnr,
-    author = "Greif, Moritz and Greiner, Carsten and Schenke, Bj{\"o}rn and Schlichting, S{\"o}ren and Xu, Zhe",
-    archivePrefix = "arXiv",
-    doi = "10.1103/PhysRevD.96.091504",
-    eprint = "1708.02076",
-    journal = "Phys. Rev. D",
-    number = "9",
-    pages = "091504",
-    primaryClass = "hep-ph",
-    title = "{Importance of initial and final state effects for azimuthal correlations in p+Pb collisions}",
-    volume = "96",
-    year = "2017"
-}
+%@article{Greif:2017bnr,
+%    author = "Greif, Moritz and Greiner, Carsten and Schenke, Bj{\"o}rn and Schlichting, S{\"o}ren and Xu, Zhe",
+%    archivePrefix = "arXiv",
+%    doi = "10.1103/PhysRevD.96.091504",
+%    eprint = "1708.02076",
+%    journal = "Phys. Rev. D",
+%    number = "9",
+%    pages = "091504",
+%    primaryClass = "hep-ph",
+%    title = "{Importance of initial and final state effects for azimuthal correlations in p+Pb collisions}",
+%    volume = "96",
+%    year = "2017"
+%}
 
 @article{Weller:2017tsr,
     author = "Weller, Ryan D. and Romatschke, Paul",
@@ -1070,21 +1070,6 @@ url = "http://www.sciencedirect.com/science/article/pii/0370269374902639",
 author = "G.I. Kopylov"
 }
 
-@article{Loizides:2016tew,
-    author = "Loizides, Constantin",
-    editor = "Akiba, Y. and Esumi, S. and Fukushima, K. and Hamagaki, H. and Hatsuda, T. and Hirano, T. and Shigaki, K.",
-    title = "{Experimental overview on small collision systems at the LHC}",
-    eprint = "1602.09138",
-    archivePrefix = "arXiv",
-    primaryClass = "nucl-ex",
-    doi = "10.1016/j.nuclphysa.2016.04.022",
-    journal = "Nucl. Phys. A",
-    volume = "956",
-    pages = "200--207",
-    year = "2016"
-}
-
-
 @article{Gyulassy:1990ye,
     author = "Gyulassy, Miklos and Plumer, Michael",
     title = "{Jet Quenching in Dense Matter}",
@@ -1134,22 +1119,6 @@ author = "G.I. Kopylov"
     volume = "09",
     pages = "109",
     year = "2011"
-}
-
-@article{Aaboud:2019mcw,
-    author = "Aaboud, Morad and others",
-    collaboration = "ATLAS",
-    title = "{Measurement of long-range two-particle azimuthal correlations in $Z$-boson tagged $pp$ collisions at $\sqrt{s}{=}8$ and 13 TeV}",
-    eprint = "1906.08290",
-    archivePrefix = "arXiv",
-    primaryClass = "nucl-ex",
-    reportNumber = "CERN-EP-2019-103",
-    doi = "10.1140/epjc/s10052-020-7606-6",
-    journal = "Eur. Phys. J. C",
-    volume = "80",
-    number = "1",
-    pages = "64",
-    year = "2020"
 }
 
 @article{PHENIX:2006gto,
@@ -1479,3 +1448,309 @@ SLACcitation   = "%%CITATION = ARXIV:1212.2001;%%"
     pages = "024911",
     year = "2020"
 }
+@article{Kurkela:2019kip,
+    author = "Kurkela, Aleksi and Wiedemann, Urs Achim and Wu, Bin",
+    title = "{Flow in AA and pA as an interplay of fluid-like and non-fluid like excitations}",
+    eprint = "1905.05139",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "CERN-TH-2019-066",
+    doi = "10.1140/epjc/s10052-019-7428-6",
+    journal = "Eur. Phys. J. C",
+    volume = "79",
+    number = "11",
+    pages = "965",
+    year = "2019"
+}
+@article{Kurkela:2020wwb,
+    author = "Kurkela, Aleksi and Taghavi, Seyed Farid and Wiedemann, Urs Achim and Wu, Bin",
+    title = "{Hydrodynamization in systems with detailed transverse profiles}",
+    eprint = "2007.06851",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "CERN-TH-2020-118",
+    doi = "10.1016/j.physletb.2020.135901",
+    journal = "Phys. Lett. B",
+    volume = "811",
+    pages = "135901",
+    year = "2020"
+}
+@article{Gubser:2010ze,
+    author = "Gubser, Steven S.",
+    title = "{Symmetry constraints on generalizations of Bjorken flow}",
+    eprint = "1006.0006",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    reportNumber = "PUPT-2340",
+    doi = "10.1103/PhysRevD.82.085027",
+    journal = "Phys. Rev. D",
+    volume = "82",
+    pages = "085027",
+    year = "2010"
+}
+@article{Gubser:2010ui,
+    author = "Gubser, Steven S. and Yarom, Amos",
+    title = "{Conformal hydrodynamics in Minkowski and de Sitter spacetimes}",
+    eprint = "1012.1314",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    reportNumber = "PUPT-2358",
+    doi = "10.1016/j.nuclphysb.2011.01.012",
+    journal = "Nucl. Phys. B",
+    volume = "846",
+    pages = "469--511",
+    year = "2011"
+}
+@article{ATLAS:2017rtr,
+    author = "Aaboud, Morad and others",
+    collaboration = "ATLAS",
+    title = "{Measurement of long-range multiparticle azimuthal correlations with the subevent cumulant method in $pp$ and $p + Pb$ collisions with the ATLAS detector at the CERN Large Hadron Collider}",
+    eprint = "1708.03559",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ex",
+    reportNumber = "CERN-EP-2017-160",
+    doi = "10.1103/PhysRevC.97.024904",
+    journal = "Phys. Rev. C",
+    volume = "97",
+    number = "2",
+    pages = "024904",
+    year = "2018"
+}
+
+@article{Schenke:2012wb,
+    author = "Schenke, Bjoern and Tribedy, Prithwish and Venugopalan, Raju",
+    title = "{Fluctuating Glasma initial conditions and flow in heavy ion collisions}",
+    eprint = "1202.6646",
+    archivePrefix = "arXiv",
+    primaryClass = "nucl-th",
+    doi = "10.1103/PhysRevLett.108.252301",
+    journal = "Phys. Rev. Lett.",
+    volume = "108",
+    pages = "252301",
+    year = "2012"
+}
+
+@article{Schenke:2012hg,
+    author = "Schenke, Bjoern and Tribedy, Prithwish and Venugopalan, Raju",
+    title = "{Event-by-event gluon multiplicity, energy density, and eccentricities in ultrarelativistic heavy-ion collisions}",
+    eprint = "1206.6805",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    doi = "10.1103/PhysRevC.86.034908",
+    journal = "Phys. Rev. C",
+    volume = "86",
+    pages = "034908",
+    year = "2012"
+}
+@article{Bass:1998ca,
+    author = "Bass, S. A. and others",
+    title = "{Microscopic models for ultrarelativistic heavy ion collisions}",
+    eprint = "nucl-th/9803035",
+    archivePrefix = "arXiv",
+    doi = "10.1016/S0146-6410(98)00058-1",
+    journal = "Prog. Part. Nucl. Phys.",
+    volume = "41",
+    pages = "255--369",
+    year = "1998"
+}
+@article{Bleicher:1999xi,
+    author = "Bleicher, M. and others",
+    title = "{Relativistic hadron hadron collisions in the ultrarelativistic quantum molecular dynamics model}",
+    eprint = "hep-ph/9909407",
+    archivePrefix = "arXiv",
+    doi = "10.1088/0954-3899/25/9/308",
+    journal = "J. Phys. G",
+    volume = "25",
+    pages = "1859--1896",
+    year = "1999"
+}
+@article{Weil:2016zrk,
+    author = "Weil, J. and others",
+    title = "{Particle production and equilibrium properties within a new hadron transport approach for heavy-ion collisions}",
+    eprint = "1606.06642",
+    archivePrefix = "arXiv",
+    primaryClass = "nucl-th",
+    doi = "10.1103/PhysRevC.94.054905",
+    journal = "Phys. Rev. C",
+    volume = "94",
+    number = "5",
+    pages = "054905",
+    year = "2016"
+}
+
+@article{Kolb:2003dz,
+    author = "Kolb, Peter F. and Heinz, Ulrich W.",
+    editor = "Hwa, Rudolph C. and Wang, Xin-Nian",
+    title = "{Hydrodynamic description of ultrarelativistic heavy ion collisions}",
+    eprint = "nucl-th/0305084",
+    archivePrefix = "arXiv",
+    reportNumber = "SUNY-NTG-03-06",
+    pages = "634--714",
+    month = "5",
+    year = "2003"
+}
+
+@article{Song:2007ux,
+    author = "Song, Huichao and Heinz, Ulrich W.",
+    title = "{Causal viscous hydrodynamics in 2+1 dimensions for relativistic heavy-ion collisions}",
+    eprint = "0712.3715",
+    archivePrefix = "arXiv",
+    primaryClass = "nucl-th",
+    reportNumber = "CERN-PH-TH-2007-269",
+    doi = "10.1103/PhysRevC.77.064901",
+    journal = "Phys. Rev. C",
+    volume = "77",
+    pages = "064901",
+    year = "2008"
+}
+
+@article{Dusling:2007gi,
+    author = "Dusling, K. and Teaney, D.",
+    title = "{Simulating elliptic flow with viscous hydrodynamics}",
+    eprint = "0710.5932",
+    archivePrefix = "arXiv",
+    primaryClass = "nucl-th",
+    doi = "10.1103/PhysRevC.77.034905",
+    journal = "Phys. Rev. C",
+    volume = "77",
+    pages = "034905",
+    year = "2008"
+}
+
+@article{Holopainen:2010gz,
+    author = "Holopainen, Hannu and Niemi, Harri and Eskola, Kari J.",
+    title = "{Event-by-event hydrodynamics and elliptic flow from fluctuating initial state}",
+    eprint = "1007.0368",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "INT-PUB-10-031",
+    doi = "10.1103/PhysRevC.83.034901",
+    journal = "Phys. Rev. C",
+    volume = "83",
+    pages = "034901",
+    year = "2011"
+}
+
+@article{Schenke:2010rr,
+    author = "Schenke, Bjorn and Jeon, Sangyong and Gale, Charles",
+    title = "{Elliptic and triangular flow in event-by-event (3+1)D viscous hydrodynamics}",
+    eprint = "1009.3244",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    doi = "10.1103/PhysRevLett.106.042301",
+    journal = "Phys. Rev. Lett.",
+    volume = "106",
+    pages = "042301",
+    year = "2011"
+}
+
+
+@article{ALICE:2013mez,
+    author = "Abelev, Betty and others",
+    collaboration = "ALICE",
+    title = "{Centrality dependence of $\pi$, K, p production in Pb-Pb collisions at $\sqrt{s_{NN}}$ = 2.76 TeV}",
+    eprint = "1303.0737",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ex",
+    reportNumber = "CERN-PH-EP-2013-019",
+    doi = "10.1103/PhysRevC.88.044910",
+    journal = "Phys. Rev. C",
+    volume = "88",
+    pages = "044910",
+    year = "2013"
+}
+@article{ALICE:2011ab,
+    author = "Aamodt, K. and others",
+    collaboration = "ALICE",
+    title = "{Higher harmonic anisotropic flow measurements of charged particles in Pb-Pb collisions at $\sqrt{s_{NN}}$=2.76 TeV}",
+    eprint = "1105.3865",
+    archivePrefix = "arXiv",
+    primaryClass = "nucl-ex",
+    reportNumber = "CERN-PH-EP-2011-073",
+    doi = "10.1103/PhysRevLett.107.032301",
+    journal = "Phys. Rev. Lett.",
+    volume = "107",
+    pages = "032301",
+    year = "2011"
+}
+@article{OrjuelaKoop:2015jss,
+    author = "Orjuela Koop, J. D. and Adare, A. and McGlinchey, D. and Nagle, J. L.",
+    title = "{Azimuthal anisotropy relative to the participant plane from a multiphase transport model in central p + Au , d + Au , and $^{3}$He + Au collisions at $\sqrt{s_{NN}}=200$ GeV}",
+    eprint = "1501.06880",
+    archivePrefix = "arXiv",
+    primaryClass = "nucl-ex",
+    doi = "10.1103/PhysRevC.92.054903",
+    journal = "Phys. Rev. C",
+    volume = "92",
+    number = "5",
+    pages = "054903",
+    year = "2015"
+}
+@article{Gallmeister:2018mcn,
+    author = "Gallmeister, K. and Niemi, H. and Greiner, C. and Rischke, D. H.",
+    title = "{Exploring the applicability of dissipative fluid dynamics to small systems by comparison to the Boltzmann equation}",
+    eprint = "1804.09512",
+    archivePrefix = "arXiv",
+    primaryClass = "nucl-th",
+    doi = "10.1103/PhysRevC.98.024912",
+    journal = "Phys. Rev. C",
+    volume = "98",
+    number = "2",
+    pages = "024912",
+    year = "2018"
+}
+
+@article{Lin:2004en,
+    author = "Lin, Zi-Wei and Ko, Che Ming and Li, Bao-An and Zhang, Bin and Pal, Subrata",
+    title = "{A Multi-phase transport model for relativistic heavy ion collisions}",
+    eprint = "nucl-th/0411110",
+    archivePrefix = "arXiv",
+    doi = "10.1103/PhysRevC.72.064901",
+    journal = "Phys. Rev. C",
+    volume = "72",
+    pages = "064901",
+    year = "2005"
+}
+
+@article{Ambrus:2021fej,
+    author = "Ambrus, Victor E. and Schlichting, S. and Werthmann, C.",
+    title = "{Development of transverse flow at small and large opacities in conformal kinetic theory}",
+    eprint = "2109.03290",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    doi = "10.1103/PhysRevD.105.014031",
+    journal = "Phys. Rev. D",
+    volume = "105",
+    number = "1",
+    pages = "014031",
+    year = "2022"
+}
+@article{ALICE:2018hza,
+    author = "Acharya, Shreyasi and others",
+    collaboration = "ALICE",
+    title = "{Transverse momentum spectra and nuclear modification factors of charged particles in Xe-Xe collisions at $\sqrt{s_{\rm NN}}$ = 5.44 TeV}",
+    eprint = "1805.04399",
+    archivePrefix = "arXiv",
+    primaryClass = "nucl-ex",
+    reportNumber = "CERN-EP-2018-112",
+    doi = "10.1016/j.physletb.2018.10.052",
+    journal = "Phys. Lett. B",
+    volume = "788",
+    pages = "166--179",
+    year = "2019"
+}
+@article{ALICE:2018vuu,
+    author = "Acharya, S. and others",
+    collaboration = "ALICE",
+    title = "{Transverse momentum spectra and nuclear modification factors of charged particles in pp, p-Pb and Pb-Pb collisions at the LHC}",
+    eprint = "1802.09145",
+    archivePrefix = "arXiv",
+    primaryClass = "nucl-ex",
+    reportNumber = "CERN-EP-2018-025",
+    doi = "10.1007/JHEP11(2018)013",
+    journal = "JHEP",
+    volume = "11",
+    pages = "013",
+    year = "2018"
+}
+Copy to ClipboardDownload
