--- a/sec_intro.tex
+++ b/sec_intro.tex
@@ -3,29 +3,61 @@
 \section{Introduction}
 \label{sec:intro}
 
-High-energy nucleus--nucleus collisions exhibit strong collectivity, observed through significant correlations between particles emitted over a wide pseudorapidity range at RHIC~\cite{Adams:2005dq,Adcox:2004mh,Arsene:2004fa,Back:2004je} and LHC~\cite{Abelev:2012di, Abelev:2014pua, ATLAS:2011ah}. The collective effects originate from the pressure-driven expansion of the strongly interacting quark-gluon plasma (QGP) that is formed at the extreme temperatures created in a collision event. This expansion is described by relativistic hydrodynamics~\cite{Romatschke:2007mq,Jeon:2015dfa,Romatschke:2017ejr}, for which the measured correlations act as constraints for the transport properties of the QGP. The understanding of the transport properties has recently been significantly advanced through efforts in experimental~\cite{ALICE:2016kpq,Acharya:2017gsw,Acharya:2017zfg,Acharya:2020taj,ALICE:2021klf,ALICE:2021adw} and theoretical studies~\cite{Niemi:2015qia,Bernhard:2016tnd,Bernhard:2019bmu,Parkkila:2021tqq,Parkkila:2021yha}.
+High-energy nucleus--nucleus (AA) collisions exhibit strong collectivity which has been observed through anisotropy in the momentum distribution of emitted final particles at RHIC~\cite{Adams:2005dq,Adcox:2004mh,Arsene:2004fa,Back:2004je} and LHC~\cite{Abelev:2012di, Abelev:2014pua, ATLAS:2011ah}. This momentum anisotropy can originate from the initial spatial anisotropy developed by a pressure-driven expansion of the strongly interacting quark-gluon plasma (QGP) formed in a collision event.
+%The collective effects originate from the pressure-driven expansion of the strongly interacting quark-gluon plasma (QGP) that is formed at the extreme temperatures created in a collision event. 
+% [Keep it?]
+% This expansion is described by relativistic hydrodynamics~\cite{Romatschke:2007mq,Jeon:2015dfa,Romatschke:2017ejr}, for which the measured anisotropy acts as constraints for the transport properties of the QGP. The understanding of the transport properties has recently been significantly advanced through efforts in experimental~\cite{ALICE:2016kpq,Acharya:2017gsw,Acharya:2017zfg,Acharya:2020taj,ALICE:2021klf,ALICE:2021adw} and theoretical studies~\cite{Niemi:2015qia,Bernhard:2016tnd,Bernhard:2019bmu,Parkkila:2021tqq,Parkkila:2021yha}.
+The collective behaviour in the momentum anisotropy is mostly estimated via long-range particle correlations over a wide range pseudorapidity. Over the past years, the long-range correlations are also observed in smaller collision systems, particularly high-multiplicity proton--proton (pp)~\cite{Aad:2015gqa,Khachatryan:2015lva,Khachatryan:2016txc,Acharya:2019vdf,ATLAS:2017rtr}, proton--nucleus (pA)~\cite{ALICE:2012eyl,Aad:2014lta,Aaboud:2016yar,Khachatryan:2016ibd}, and light AA collisions~\cite{PHENIX:2018lia,Aidala:2017ajz}. These observations raise the question of to what extent the small system collisions share a similar underlying mechanism in developing the correlations as heavy AA collisions.
 
-Correspondingly, long-range correlations are also observed in smaller collision systems, particularly high-multiplicity proton--proton (pp)~\cite{Aad:2015gqa,Khachatryan:2015lva,Khachatryan:2016txc,Acharya:2019vdf}, proton--nucleus (pA)~\cite{ALICE:2012eyl,Aad:2014lta,Aaboud:2016yar,Khachatryan:2016ibd}, and light nucleus--nucleus collisions~\cite{PHENIX:2018lia,Aidala:2017ajz}. The long pseudorapidity range of these correlations suggests that they originate from a very early stage of a collision, which in turn implies a hydrodynamic expansion of a medium created in these small systems. The small collision geometry in these systems entails a very short-lived medium of smaller volume, and it is not established in what extend the potential hydrodynamic behaviour contributes with respect to the flow-like signals produced by other mechanisms~\cite{Busza:2018rrf,Nagle:2018nvi}.
+In the absence of an inclusive technique in computing the evolution of an out-of-equilibrium strongly coupled quantum chromodynamic medium, the evolution of AA collisions' soft-sector is separated into multiple stages, and each stage is described by an effective theory. To this date, the combination of color-glass condensate effective theory (CGC-EFT)~\cite{Schenke:2012wb,Schenke:2012hg}, causal hydrodynamics~\cite{Kolb:2003dz,Song:2007ux,Dusling:2007gi,Holopainen:2010gz,Schenke:2010rr,Romatschke:2007mq,Niemi:2015qia,Jeon:2015dfa,Romatschke:2017ejr}, and hadronic cascade~\cite{Bass:1998ca,Bleicher:1999xi,Weil:2016zrk} leads to the most successful explanation of a wide range of observables, e.g., particle spectrum, centrality dependence of average transverse momentum, and multi-particle correlations in heavy-ion collisions~\cite{ALICE:2016kpq,Acharya:2017gsw,Acharya:2017zfg,Acharya:2020taj,ALICE:2021klf,ALICE:2021adw,ALICE:2013mez,ALICE:2011ab}. By employing the global Bayesian analysis, our understating of the underlying theory has advanced such that we can infer the parameters of the multi-stage model, including those quantifying the transport properties of QGP from the measurement~\cite{Bernhard:2016tnd,Bernhard:2019bmu,Parkkila:2021tqq,Parkkila:2021yha}. Despite the studies describing both heavy AA and pA collisions in a single framework~\cite{Moreland:2018gsh}, the origin of the flow-like correlations in pp and pA correlation is still under debate. It is not evident whether the flow-like behaviours originate from the early stages of the collision in the realm of CGC-EFT~\cite{Dusling:2012cg,Bzdak:2013zma} or whether they are developed during the collective evolution period in which causal hydrodynamics is applicable~\cite{Greif:2017bnr,Mantysaari:2017cni}. Both scenarios may be responsible for the observed correlations in the final state~\cite{Greif:2017bnr}. Although collective models are successful in describing the two-particle correlations in small-system collisions, they predict an opposite sign for four-particle correlations compared to the experiment~\cite{Khachatryan:2016txc,ATLAS:2017rtr}.  A semi-analytical toy model based on Gubser hydrodynamic solution~\cite{Gubser:2010ze,Gubser:2010ui} can explain the two- and four-particle correlations in pp collisions~\cite{Taghavi:2019mqz}. In particular, the relation between the sign of the four-particle correlations and the initial state fluctuation has been demonstrated. 
 
-On the theoretical side, these flow signals in high-multiplicity pp and p--Pb events have been attributed to initial-state or final-state effects. Initial-state effects, usually attributed to gluon saturation~\cite{Dusling:2012cg,Bzdak:2013zma}, can form long-range
-correlations along the longitudinal direction. The final-state effects might be parton-induced interactions~\cite{Arbuzov:2011yr} or collective phenomena due to hydrodynamic behavior of the produced matter arising in a high-density system possibly formed in these collisions~\cite{Weller:2017tsr,Zhao:2017rgg}. 
-Hybrid models implementing both effects are generally used in hydrodynamic simulations~\cite{Greif:2017bnr,Mantysaari:2017cni}. EPOS LHC describes collectivity in small systems with a parameterized hydrodynamic evolution of the high-energy density region, so called ``core'', formed by many color string fields~\cite{Pierog:2013ria}.
-The proton shape and its fluctuations are also important to model small systems~\cite{Mantysaari:2017cni}.
-To understand the influence of initial- or final-state effects, and to possibly disentangle the two, a quantitative description of the measurements in small systems~\cite{Schenke:2019pmk,Schenke:2020mbo} needs to account for details of the initial state.
 
-Alternative descriptions for the small systems collectivity include the PYTHIA~8 event generator, in which interacting strings repel one another transversely in an approach dubbed ``string shoving''~\cite{Bierlich:2017vhg,Bierlich:2019ixq}. The repulsion of the strings causes a microscopic transverse pressure, giving a rise to the long-range correlations. The string shoving approach in PYTHIA~8 successively reproduces the near-side ($\Delta\varphi\sim0$) ridge yield in measurements by ALICE~\cite{ALICE:2021nir} and CMS~\cite{Khachatryan:2016txc} Collaboration. Systematic mapping of the correlations effects across collision systems of varying size is presently underway on the theoretical side~(see e.g. \cite{Schenke:2020mbo}).
-%Besides the hybrid models mentioned above, alternative approaches were developed to describe collectivity in small systems. A microscopic model for collectivity was implemented in the PYTHIA~8 event generator, which is based on interacting strings (string shoving) and is called the “string shoving model”~\cite{Bierlich:2017vhg}. In this model, strings repel each other in the transverse direction, which results in microscopic transverse pressure and, consequently, in long-range correlations.
-%PYTHIA~8 with string shoving can qualitatively reproduce the near-side ($\Delta\varphi\sim0$) ridge yield measured by the CMS Collaboration~\cite{Khachatryan:2016txc}.
-%Systematic studies of these correlation effects from small to large systems are being performed on the theoretical side~(see e.g. \cite{Schenke:2020mbo}).
-The quantitative description of the full set of experimental data has not been achieved yet. A summary of various explanations for the observed correlations in small systems is given in~\cite{Strickland:2018exs,Loizides:2016tew,Nagle:2018nvi}. 
+Besides the models based on the causal hydrodynamic framework in describing the collective evolution in small-system collisions, there are other attends to explain the flow-like signals using alternative descriptions. For instance, a study based on the transport model AMPT~\cite{Lin:2004en} leads to a satisfactory agreement with the experiment~\cite{OrjuelaKoop:2015jss}. The applicability of fluid-dynamical simulations and partonic cascade models in small systems has been explored in Ref.~\cite{Gallmeister:2018mcn}. In the context of kinetic theory with isotropization-time approximation, the model can smoothly explain the long-range correlations by fluid-like (hydrodynamic) excitations for Pb--Pb collisions and particle-like (or non-hydrodynamic) excitations for pp or p--Pb collisions~\cite{Kurkela:2019kip,Kurkela:2020wwb,Ambrus:2021fej}. Another description for the collectivity in small systems includes the PYTHIA~8 event generator, in which interacting strings repel one another transversely in an approach dubbed ``string shoving''~\cite{Bierlich:2017vhg,Bierlich:2019ixq}. The repulsion of the strings causes a microscopic transverse pressure, giving rise to the long-range correlations. The string shoving approach in PYTHIA~8 successively reproduces the near-side ($\Delta\varphi\sim0$) ridge yield in measurements by ALICE~\cite{ALICE:2021nir} and CMS~\cite{Khachatryan:2016txc}. Systematic mapping of the correlation effects across collision systems by varying sizes is presently underway on the theoretical side~(see e.g. \cite{Schenke:2020mbo}). The quantitative description of the full set of experimental data has not been achieved yet. A summary of various explanations for the observed correlations in small systems is given in~\cite{Strickland:2018exs,Loizides:2016tew,Nagle:2018nvi}. 
 
-Another crucial evidence of a strongly interacting systems in small collision systems would be to confirm the presence of jet quenching~\cite{Gyulassy:1990ye,Wang:1991xy}, however, no evidence is observed so far in neither high-multiplicicty pp or p--Pb collisions~\cite{Adam:2014qja,Khachatryan:2016odn,Adam:2016jfp,Adam:2016dau,Acharya:2017okq}. Two-particle angular correlations in short -range correlations around $(\Delta\eta$, $\Delta\varphi)=(0,0)$~\cite{Adam:2016tsv} is a good tool to study jet fragmentations with.
+% it has been demonstrated that the negative sign for the measured four-particle correlations \cite{Khachatryan:2016txc,ATLAS:2017rtr} can be obtained if the initial state fluctuation is satisfies . 
+
+%The fluid-like excitations are considered to be the medium degrees of freedom in the strongly coupled QGP in AA collisions. However, there are models based on  based on particle-like excitations could also explain  
+
+
+
+
+%... The observed fluid-like correlations amongst final particles in the in small collisions  systems leads to t
+
+% [END]
+
+% ---
+
+% The long pseudorapidity range of these correlations suggests that they originate from a very early stage of a collision, which in turn implies a hydrodynamic expansion of a medium created in these small systems. The small collision geometry in these systems entails a very short-lived medium of smaller volume, and it is not established in what extend the potential hydrodynamic behaviour contributes with respect to the flow-like signals produced by other mechanisms~\cite{Busza:2018rrf,Nagle:2018nvi}.
+
+
+
+%On the theoretical side, these flow signals in high-multiplicity pp and p--Pb events have been attributed to initial-state or final-state effects. Initial-state effects, usually attributed to gluon saturation~\cite{Dusling:2012cg,Bzdak:2013zma}, can form long-range
+% correlations along the longitudinal direction. The final-state effects might be parton-induced interactions~\cite{Arbuzov:2011yr} or collective phenomena due to hydrodynamic behavior of the produced matter arising in a high-density system possibly formed in these collisions~\cite{Weller:2017tsr,Zhao:2017rgg}. 
+% Hybrid models implementing both effects are generally used in hydrodynamic simulations~\cite{Greif:2017bnr,Mantysaari:2017cni}. 
+
+
+% A semi-analytical toy model based on Gubser hydrodynamic solution~\cite{Gubser:2010ze,Gubser:2010ui} can explain the anisotropic flow in pp collisions~\cite{Taghavi:2019mqz}. In particular, it has been demonstrated that the negative sign for the measured four-particle correlations \cite{Khachatryan:2016txc,ATLAS:2017rtr} can be obtained under what circumstances of the initial state fluctuation. 
+% In the context of kinetic theory with isotropization-time approximation, the long-range correlation is explained by fluid-like (hydrodynamic) excitations for Pb--Pb collisions and particle-like (or non-hydrodynamic) excitations for pp or p--Pb collisions~\cite{Kurkela:2019kip,Kurkela:2020wwb}.  
+% %EPOS LHC describes collectivity in small systems with a parameterized hydrodynamic evolution of the high-energy density region, so called ``core'', formed by many color string fields~\cite{Pierog:2013ria}.
+% The proton shape and its fluctuations are also important to model small systems~\cite{Mantysaari:2017cni}.
+% To understand the influence of initial- or final-state effects, and to possibly disentangle the two, a quantitative description of the measurements in small systems~\cite{Schenke:2019pmk,Schenke:2020mbo} needs to account for details of the initial state.
+
+
+% Alternative descriptions for the small systems collectivity include the PYTHIA~8 event generator, in which interacting strings repel one another transversely in an approach dubbed ``string shoving''~\cite{Bierlich:2017vhg,Bierlich:2019ixq}. The repulsion of the strings causes a microscopic transverse pressure, giving a rise to the long-range correlations. The string shoving approach in PYTHIA~8 successively reproduces the near-side ($\Delta\varphi\sim0$) ridge yield in measurements by ALICE~\cite{ALICE:2021nir} and CMS~\cite{Khachatryan:2016txc} Collaboration. Systematic mapping of the correlations effects across collision systems of varying size is presently underway on the theoretical side~(see e.g. \cite{Schenke:2020mbo}).
+% %Besides the hybrid models mentioned above, alternative approaches were developed to describe collectivity in small systems. A microscopic model for collectivity was implemented in the PYTHIA~8 event generator, which is based on interacting strings (string shoving) and is called the “string shoving model”~\cite{Bierlich:2017vhg}. In this model, strings repel each other in the transverse direction, which results in microscopic transverse pressure and, consequently, in long-range correlations.
+% %PYTHIA~8 with string shoving can qualitatively reproduce the near-side ($\Delta\varphi\sim0$) ridge yield measured by the CMS Collaboration~\cite{Khachatryan:2016txc}.
+% %Systematic studies of these correlation effects from small to large systems are being performed on the theoretical side~(see e.g. \cite{Schenke:2020mbo}).
+% The quantitative description of the full set of experimental data has not been achieved yet. A summary of various explanations for the observed correlations in small systems is given in~\cite{Strickland:2018exs,Loizides:2016tew,Nagle:2018nvi}. 
+
+% ---
+
+Another crucial evidence of a strongly interacting medium in small collision systems would be the presence of jet quenching~\cite{Gyulassy:1990ye,Wang:1991xy}. However, no evidence has been observed in either high-multiplicity pp or p--Pb collisions~\cite{Adam:2014qja,Khachatryan:2016odn,Adam:2016jfp,Adam:2016dau,Acharya:2017okq}. A study with two-particle angular correlations in short-range correlations around $(\Delta\eta$, $\Delta\varphi)=(0,0)$ is a good tool for studying jet fragmentations~\cite{Adam:2016tsv}.
 
 On the experimental side, flow extraction methods in these small systems have not been fully understood due to the strong jet fragmentation bias. 
-For two-particle correlations, the non-flow contribution is usually suppressed by requiring a large $\Delta\eta$ gap between the two particles and it is also widely used in cumulant methods~\cite{Bilandzic:2010jr, Acharya:2019vdf}. However, this $\Delta\eta$ gap method both for two-particle correlations and cumulants removes the non-flow contribution only on the near-side and not on the away-side ($\Delta\varphi\sim\pi$). Later it was proposed to use low-multiplicity template fit to remove also away-side contributions~\cite{ATLAS:2015hzw,ATLAS:2016yzd,ATLAS:2018ngv}, taking into account the auto-correlation between event multiplicity and jet yields~\cite{CMS:2013ycn}. This template fit method allows one to subtract the enhanced away-side jet yields in high-multiplicity with respect to low-multiplicity events, possibly testing a lower limit of event multiplicity on the flow signal.
+For two-particle correlations, the non-flow contribution is usually suppressed by requiring a large $\Delta\eta$ gap between the two particles,  and it is also widely used in cumulant methods~\cite{Bilandzic:2010jr, Acharya:2019vdf}. However, this $\Delta\eta$ gap method for both two-particle correlations and cumulants removes the non-flow contribution only on the near side and not on the away side~($\Delta\varphi\sim\pi$). Later it was proposed to use low-multiplicity template fit to remove also away-side contributions~\cite{ATLAS:2015hzw,ATLAS:2016yzd,ATLAS:2018ngv}, taking into account the auto-correlation between event multiplicity and jet fragments~\cite{CMS:2013ycn}. This template fit method allows one to subtract the enhanced away-side jet fragments in high-multiplicity with respect to low-multiplicity events, possibly testing a lower limit of event multiplicity on the flow signal.
 
-As an extension of the ridge studies in Ref.~\cite{ALICE:2021nir}, this report studies the interplay of jet production and collective effects in small systems, long- and short-range correlations simultaneously in high-multiplicity pp collisions at $\sqrt{s} =13$ TeV and $\sqrt{s_{\mathrm{NN}}}=5.02$ TeV p-Pb collisions. The flow coefficients and near-side jet-like correlations with the event-scale selection are reported. The event-scale selection is done by requiring a minimum transverse momentum of the leading particle or the reconstructed jet at mid-rapidity, which is expected to bias the impact parameter of pp collisions to be smaller on average~\cite{Sjostrand:1986ep,Frankfurt:2003td,Frankfurt:2010ea}. At the same time, the transverse momentum of the leading particle or the reconstructed jet is a measure of the momentum transfer in the hard parton scattering~\cite{Chatrchyan:2012tt,Chatrchyan:2011id}.
+As an extension of the ridge studies in Ref.~\cite{ALICE:2021nir}, this report studies the interplay of the jet production and collective effects in small systems, long- and short-range correlations simultaneously in high-multiplicity pp collisions at $\sqrt{s} =13$ TeV and $\sqrt{s_{\mathrm{NN}}}=5.02$ TeV p--Pb collisions. The flow coefficients and near-side jet-like correlations with the event-scale selection are reported. The event-scale selection requires a minimum transverse momentum of the leading particle or the reconstructed jet at mid-rapidity, which is expected to bias the impact parameter of pp collisions to be smaller on average~\cite{Sjostrand:1986ep,Frankfurt:2003td,Frankfurt:2010ea}. At the same time, the transverse momentum of the leading particle or the reconstructed jet is a measure of the momentum transfer in the hard parton scattering~\cite{Chatrchyan:2012tt,Chatrchyan:2011id}.
 
-This paper is organized as follows. The experimental setup and analysis method are described in Sec.~\ref{sec:experiment} and \ref{sec:ana}, respectively. The sources of systematic uncertainties are discussed in Sec.~\ref{sec:uncertainties}. The results and comparisons with model calculations of the measurements are presented in Sec.~\ref{sec:results}. Finally, results are summarized in~Sec.~\ref{sec:summary}.
+This paper is organized as follows. First, the experimental setup and analysis method are described in Sec.~\ref{sec:experiment} and \ref{sec:ana}, respectively. Then, the sources of systematic uncertainties are discussed in Sec.~\ref{sec:uncertainties}. The results and comparisons with model calculations of the measurements are presented in Sec.~\ref{sec:results}. Finally, the results are summarized in~Sec.~\ref{sec:summary}.
 
  
